--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,14 @@ layout: base
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-end">
-        <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+        <h1 class="text-uppercase text-white font-weight-bold">{{ page.header.title }}</h1>
         <hr class="divider my-4">
       </div>
       <div class="col-lg-8 align-self-baseline">
-        <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        <p class="text-white-75 font-weight-light mb-5">{{ page.header.text }}</p>
+        {% if page.header.action %}
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{ page.header.action.url }}">{{ page.header.action.label }}</a>
+        {% endif %}
       </div>
     </div>
   </div>
