--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,9 +4,9 @@
       <div class="col-lg-8 {{ section.text_style | default: 'text-center' }}">
         <h2 class="text-white mt-0 text-center">{{ section.title | newline_to_br }}</h2>
         <hr class="divider light my-4">
-        <p class="text-white-50 mb-4 ">{{ section.text | markdownify }}</p>
-        {% for action in include.section.actions %}
-          <a href="{{ action.link }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.label }}</a>
+        <div class="text-white-50 mb-4 ">{{ section.text | markdownify }}</div>
+        {% for action in section.actions %}
+          <a href="{{ action.url }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.label }}</a>
         {% endfor %}
       </div>
     </div>
