--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -2,7 +2,7 @@
   <div class="container text-center">
     <h2 class="mb-4">{{ section.title }}!</h2>
     {% for action in section.actions %}
-      <a href="{{ action.link }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.label }}</a>
+      <a href="{{ action.url }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.title }}</a>
     {% endfor %}
   </div>
 </section>
