--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 {{ section.text_style | default: 'text-center' }}">
-        <h2 class="text-white mt-0 text-center">{{ section.title | newline_to_br }}</h2>
+        <h2 class="text-white mt-0 text-center">{{ section.title }}</h2>
         <hr class="divider light my-4">
         <div class="text-white-50 mb-4 ">{{ section.text | markdownify }}</div>
         {% for action in section.actions %}
-          <a href="{{ action.url }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.label }}</a>
+          <a href="{{ action.url }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.title }}</a>
         {% endfor %}
       </div>
     </div>
