--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: base
 ---
 
 <!-- Header -->
-<header class="masthead pagehead">
+<header class="masthead pagehead" {% if page.background_image %} style="background-image: {{ page.background_image }}"{% endif %} >
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 ">
@@ -20,6 +20,11 @@ layout: base
 {% endfor %}
 
 <!-- include content as section -->
-<section class="page-section  {{ page.background_style }}">
-  {{ content }}
+{% assign content = content | strip_newlines %}
+{% if content != "" %}
+<section class="page-section {{ page.background_style }}">
+  <div class="container">
+    {{ content }}
+  </div>
 </section>
+{% endif %}
