Made a new template to reuse 'actions'. It is imported in aside, call-to-action and paragraph.

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,6 @@
 <section id="{{ section.section_id }}" class="page-section bg-dark text-white {{ section.background_style }}">
   <div class="container text-center">
     <h2 class="mb-4">{{ section.title }}!</h2>
-    {% for action in section.actions %}
-      <a href="{{ action.url }}" class="btn btn-light btn-xl js-scroll-trigger {{ action.class }}">{{ action.title }}</a>
-    {% endfor %}
+    {% include actions.html actions=section.actions %}
   </div>
 </section>
