use scss for the styles, configured jekyll to minify the css by default

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,7 +18,7 @@
   <!-- Third party plugin CSS-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="assets/css/creative.min.css" rel="stylesheet">
+  <link href="assets/css/creative.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
 
