--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@charset "utf-8";
+
 /*!
  * Start Bootstrap - Creative v5.1.8 (https://startbootstrap.com/template-overviews/creative)
  * Copyright 2013-2019 Start Bootstrap
