Upgraded to Creative Theme v6.0.4
- Updated to Creative v6.0.4
- Bootstrap v4.5.3
- External scripts and css loaded with integrity attribute
- Creative v6.0.4 uses jquery.slim and jquery.easing is not working. So here we use full jquery.

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,4 +1,4 @@
-<section id="portfolio" class="{{ section.background_style }}">
+<div id="portfolio" class="{{ section.background_style }}">
   <div class="container-fluid p-0">
     <div class="row no-gutters">
       {% for proj in section.projects %}
@@ -18,4 +18,4 @@
       {% endfor %}
     </div>
   </div>
-</section>
+</div>
