--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,5 +1,5 @@
 <section id="{{ section.section_id }}" class="page-section bg-dark text-white {{ section.background_style }}">
-  <div class="container text-center">
+  <div class="container px-4 px-lg-5 text-center">
     <h2 class="mb-4">{{ section.title }}!</h2>
     {% include actions.html actions=section.actions %}
   </div>
