--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,7 +1,7 @@
 <section id="{{ section.section_id }}" class="page-section {{ section.background_style }}">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 {{ section.text_style | default: 'text-center' }}">
+  <div class="container px-4 px-lg-5 text-center">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+      <div class="col-lg-8 col-xl-6 {{ section.text_style | default: 'text-center' }}">
         <h2 class="text-white mt-0 text-center">{{ section.title }}</h2>
         <hr class="divider light my-4">
         <div class="text-white-50 mb-4 ">{{ section.text | markdownify }}</div>
