--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -1,5 +1,5 @@
 {% if include.actions %}
-<div class="row justify-content-center">
+<div class="row gx-4 gx-lg-5 justify-content-center">
   <div class="col md-auto text-center">
     {% for action in include.actions %}
       <a href="{{ action.url }}" class="btn btn-xl js-scroll-trigger {{ action.class | default: "btn-primary" }}">{{ action.title }}</a>
