--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
-  <div class="container">
+  <div class="container px-4 px-lg-5">
     <div class="small text-center text-muted">
       {{ site.data.footer.copyright }}
       &nbsp;
