--- a/_includes/paragraph.html
+++ b/_includes/paragraph.html
@@ -1,8 +1,8 @@
 <section id="{{ section.section_id }}" class="page-section-smaller {{ section.background_style }}">
-  <div class="container">
+  <div class="container px-4 px-lg-5">
     <h2 class="text-center mt-0">{{ section.title }}</h2>
     <hr class="divider my-4">
-    <div class="row justify-content-center">
+    <div class="row gx-4 gx-lg-5 justify-content-center"">
       <div class="mb-4 {{ section.text_style | default: "text-muted" }}">
         {{ section.text | newline_to_br | markdownify }}
       </div>
