--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,10 +4,10 @@ layout: base
 
 <!-- Header -->
 <header class="masthead pagehead" {% if page.background_image %} style="background-image: {{ page.background_image }}"{% endif %} >
-  <div class="container h-100">
-    <div class="row h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-10 ">
-        <h1 class="text-uppercase text-white font-weight-bold">{{ page.title }}</h1>
+  <div class="container px-4 px-lg-5 h-100">
+    <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+      <div class="col-lg-8 align-self-end">
+        <h1 class="text-white font-weight-bold">{{ page.title }}</h1>
         <hr class="divider my-4">
       </div>
     </div>
