fixed some layout issue caused by bootstrap changes

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -3,7 +3,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-lg-8 col-xl-6 {{ section.text_style | default: 'text-center' }}">
         <h2 class="text-white mt-0 text-center">{{ section.title }}</h2>
-        <hr class="divider light my-4">
+        <hr class="divider border border-2 border-white ">
         <div class="text-white-50 mb-4 ">{{ section.text | markdownify }}</div>
       </div>
     </div>
