--- a/_includes/members.html
+++ b/_includes/members.html
@@ -1,7 +1,7 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
   <div class="container px-4 px-lg-5 text-center">
     <h2 class="text-center mt-0">{{ section.title }}</h2>
-    <hr class="divider my-4">
+    <hr class="divider border border-primary border-2">
     <div class="row justify-content-center">
       {% for member in section.members %}
       <div class="col-lg-3 col-md-6 text-center">
