--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -2,7 +2,7 @@
   <div class="container px-4 px-lg-5">
     <h2 class="text-center mt-0">{{ section.title }}</h2>
     <p class="text-white-50">{{ section.text }}</p>
-    <hr class="divider my-4">
+    <hr class="divider border border-primary border-2">
     <div class="row">
       <div class="col-lg-12">
         <ul class="timeline">
