--- a/_includes/address.html
+++ b/_includes/address.html
@@ -3,7 +3,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-lg-8 col-xl-6 text-center">
         <h2 class="mt-0">{{ section.title }}</h2>
-        <hr class="divider my-4">
+        <hr class="divider border border-primary border-2">
         <p class="text-muted mb-5">{{ section.text }}</p>
       </div>
     </div>
